syntax = "proto3";

package event;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = ".;calendarapi";

message CreateEventRequest {
	string title = 1;
	string description = 2;
	google.protobuf.Timestamp startTime = 3;
	google.protobuf.Timestamp stopTime = 4;
	int64 userID = 5;
}

message CreateEventResponse {
	int64 id = 1;
}

message GetEventByIDRequest {
	int64 id = 1;
}

message EventResponse {
	int64 id = 1;
	string title = 2;
	string description = 3;
	google.protobuf.Timestamp startTime = 4;
	google.protobuf.Timestamp stopTime = 5;
	int64 userID = 6;
}

message UpdateEventRequest {
	string title = 1;
	string description = 2;
	google.protobuf.Timestamp startTime = 3;
	google.protobuf.Timestamp stopTime = 4;
	int64 userID = 5;
}

message DeleteEventRequest {
	int64 id = 1;
}

// Days Ahead Request
message ListEventsForUserRequest {
	int64 user_id = 1;
	int32 days = 2;
	google.protobuf.Timestamp date = 3;
}

message ListEventsResponse {
	repeated EventResponse events = 1;
}

service EventService {
	rpc CreateEvent (CreateEventRequest) returns (CreateEventResponse) {}
	rpc GetEventByID (GetEventByIDRequest) returns (EventResponse) {}
	rpc UpdateEvent (UpdateEventRequest) returns (google.protobuf.Empty) {}
	rpc DeleteEvent (DeleteEventRequest) returns (google.protobuf.Empty) {}

	rpc ListEventsForUser (ListEventsForUserRequest) returns (ListEventsResponse) {}
}

