syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

option go_package = ".;calendarapi";

message CreateUserRequest {
	string name = 1;
	string password = 2;
	string role = 3;
	string email = 4;
}

message CreateUserResponse {
	int64 id = 1;
}

message GetUserByIDRequest {
	int64 id = 1;
}

message GetUserByNameRequest {
	string name = 1;
}

message UserResponse {
	int64 id = 1;
	string name = 2;
	string hash_password = 3;
	string role = 4;
	string email = 5;
}

message UpdateUserRequest {
	string name = 1;
	string password = 2;
	string role = 3;
	string email = 4;
}

message DeleteUserRequest {
	string name = 1;
}

message ListUsersResponse {
	repeated UserResponse users = 1;
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginResponse {
	string access_token = 1;
}

service UserService {
	rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
	rpc GetUserByID (GetUserByIDRequest) returns (UserResponse) {}
//	rpc GetUserByName (GetUserByNameRequest) returns (UserResponse) {}
	rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty) {}
	rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty) {}
	rpc Login(LoginRequest) returns (LoginResponse){}

	rpc ListUsers (google.protobuf.Empty) returns (ListUsersResponse) {}
}